<resources>
    <string name="app_name">HexapodVorpalRemote</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_content2">DUMMY\nCONTENT2</string>
    <string name="up_icon">&#xf077;</string>
    <string name="down_icon">&#xf078;</string>
    <string name="left_icon">&#xf053;</string>
    <string name="right_icon">&#xf054;</string>
    <string name="honk_icon">&#xf1d0;</string>
    <string name="w1">W1</string>
    <string name="w2">W2</string>
    <string name="w3">W3</string>
    <string name="w4">W4</string>
    <string name="d4">D4</string>
    <string name="d3">D3</string>
    <string name="d2">D2</string>
    <string name="d1">D1</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="f3">F3</string>
    <string name="f4">F4</string>
    <string name="r1">ADJ</string>
    <string name="r2">STA</string>
    <string name="r3">TST</string>
    <string name="r4">DEM</string>
    <string name="r5">Dis Mot</string>
    <string name="stop_motion">STOP</string>

    <string name="connection">Blutooth</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="error_bluetooth_not_supported">No supported</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_devices">Choose Hexapod</string>
    <string name="refresh">Refresh</string>

</resources>
